lemontest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
